[調整] swagger文件
